// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer adds custom close node 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
}

.c1 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  position: relative;
  z-index: 10;
  height: 100vh;
  overflow: auto;
  background-color: rgba(0,0,0,0.5);
}

.c1 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (max-width:480px) {
  .c2 {
    min-height: 100%;
    min-width: 100%;
  }
}

@media only screen and (min-width:481px) {
  .c2 {
    position: absolute;
    max-height: 100%;
    max-width: 100%;
    overflow: auto;
    border-radius: 4px;
  }
}

@media only screen and (min-width:481px) {
  .c1 {
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
  }
}

<Grommet
  centered={true}
>
  <StyledGrommet__StyledGrommet
    centered={true}
    theme={
      Object {
        "button": Object {
          "border": Object {
            "radius": "5px",
            "width": "2px",
          },
          "colors": Object {
            "accent": "#00CCEB",
            "critical": "#FF324D",
            "secondary": "#DC2878",
          },
          "maxWidth": "384px",
          "minWidth": "120px",
          "padding": Object {
            "horizontal": "22px",
            "vertical": "6px",
          },
        },
        "global": Object {
          "centerColumnWidth": "1152px",
          "colors": Object {
            "accent": Array [
              "#00CCEB",
              "#FF7D28",
            ],
            "background": "#FFFFFF",
            "black": "#000000",
            "brand": "#865CD6",
            "dark": Array [
              "#333333",
              "#444444",
              "#555555",
              "#666666",
              "#777777",
              "#999999",
            ],
            "darkBackgroundTextColor": "rgba(255, 255, 255, 0.85)",
            "light": Array [
              "#F6F6F6",
              "#EEEEEE",
              "#DDDDDD",
              "#CCCCCC",
              "#BBBBBB",
              "#AAAAAA",
            ],
            "neutral": Array [
              "#0A64A0",
              "#DC2878",
              "#501EB4",
              "#49516F",
            ],
            "status": Object {
              "critical": "#FF324D",
              "disabled": "#a8a8a8",
              "error": "#FF324D",
              "ok": "#8CC800",
              "unknown": "#a8a8a8",
              "warning": "#FFD602",
            },
            "text": "#333333",
            "white": "#FFFFFF",
          },
          "control": Object {
            "font": Object {
              "size": "19px",
              "weight": 600,
            },
          },
          "drop": Object {
            "backgroundColor": "#f8f8f8",
            "border": Object {
              "radius": "0px",
              "width": "0px",
            },
            "boxShadow": "none",
          },
          "edgeSize": Object {
            "large": "48px",
            "medium": "24px",
            "small": "12px",
            "xlarge": "96px",
            "xsmall": "6px",
          },
          "focus": Object {
            "border": Object {},
          },
          "font": Object {
            "face": "
              @font-face {
                font-family: 'Work Sans';
                font-style: normal;
                font-weight: 300;
                src:
                  local('Work Sans Light'),
                  local('WorkSans-Light'),
                  url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
              }
      
              @font-face {
                font-family: 'Work Sans';
                font-style: normal;
                font-weight: 400;
                src:
                  local('Work Sans'),
                  local('WorkSans-Regular'),
                  url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
              }
      
              @font-face {
                font-family: 'Work Sans';
                font-style: normal;
                font-weight: 500;
                src:
                  local('Work Sans Medium'),
                  local('WorkSans-Medium'),
                  url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
              }
      
              @font-face {
                font-family: 'Work Sans';
                font-style: normal;
                font-weight: 600;
                src:
                  local('Work Sans SemiBold'),
                  local('WorkSans-SemiBold'),
                  url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
              }
      
              @font-face {
                font-family: 'Work Sans';
                font-style: normal;
                font-weight: 700;
                src:
                  local('Work Sans Bold'),
                  local('WorkSans-Bold'),
                  url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
              }
            ",
            "family": "'Work Sans', Arial, sans-serif",
            "size": "16px",
          },
          "hover": Object {
            "backgroundColor": "rgba(221,221,221,0.5)",
            "textColor": "#000000",
          },
          "input": Object {
            "border": Object {
              "color": "rgba(0, 0, 0, 0.15)",
              "radius": "4px",
              "width": "1px",
            },
          },
          "lineHeight": "24px",
          "placeholder": Object {
            "color": "#AAAAAA",
          },
          "selected": Object {
            "backgroundColor": "#ccbaee",
            "textColor": "#333333",
          },
          "size": Object {
            "full": "100%",
            "large": "576px",
            "medium": "384px",
            "small": "192px",
            "xlarge": "720px",
            "xsmall": "96px",
            "xxlarge": "960px",
            "xxsmall": "48px",
          },
          "spacing": "24px",
        },
        "grommet": Object {},
        "heading": Object {
          "level": Object {
            "1": Object {
              "large": Object {
                "height": 1.125,
                "size": "96px",
              },
              "medium": Object {
                "height": 1.125,
                "size": "48px",
              },
              "small": Object {
                "height": 1.333,
                "size": "24px",
              },
            },
            "2": Object {
              "large": Object {
                "height": 1.125,
                "size": "48px",
              },
              "medium": Object {
                "height": 1.23,
                "size": "36px",
              },
              "small": Object {
                "height": 1.333,
                "size": "18px",
              },
            },
            "3": Object {
              "large": Object {
                "height": 1.23,
                "size": "36px",
              },
              "medium": Object {
                "height": 1.333,
                "size": "24px",
              },
              "small": Object {
                "height": 1.333,
                "size": "18px",
              },
            },
            "4": Object {
              "large": Object {
                "height": 1.333,
                "size": "24px",
              },
              "medium": Object {
                "height": 1.333,
                "size": "18px",
              },
              "small": Object {
                "height": 1.333,
                "size": "16px",
              },
            },
          },
          "weight": 300,
        },
        "layer": Object {
          "backgroundColor": "#FFFFFF",
          "border": Object {
            "radius": "4px",
          },
          "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
        },
        "paragraph": Object {
          "large": Object {
            "height": 1.167,
            "maxWidth": "864px",
            "size": "24px",
          },
          "medium": Object {
            "height": 1.375,
            "maxWidth": "576px",
            "size": "16px",
          },
          "small": Object {
            "height": 1.43,
            "maxWidth": "432px",
            "size": "14px",
          },
          "xlarge": Object {
            "height": 1.1875,
            "maxWidth": "1152px",
            "size": "32px",
          },
        },
      }
    }
  >
    <div
      className="c0"
    >
      <LayerContainer
        closer={
          <div>
            custom closer
          </div>
        }
        onClose={[Function]}
      >
        <Keyboard
          onEsc={[Function]}
        >
          <StyledLayer
            onKeyDown={[Function]}
            theme={
              Object {
                "button": Object {
                  "border": Object {
                    "radius": "5px",
                    "width": "2px",
                  },
                  "colors": Object {
                    "accent": "#00CCEB",
                    "critical": "#FF324D",
                    "secondary": "#DC2878",
                  },
                  "maxWidth": "384px",
                  "minWidth": "120px",
                  "padding": Object {
                    "horizontal": "22px",
                    "vertical": "6px",
                  },
                },
                "global": Object {
                  "centerColumnWidth": "1152px",
                  "colors": Object {
                    "accent": Array [
                      "#00CCEB",
                      "#FF7D28",
                    ],
                    "background": "#FFFFFF",
                    "black": "#000000",
                    "brand": "#865CD6",
                    "dark": Array [
                      "#333333",
                      "#444444",
                      "#555555",
                      "#666666",
                      "#777777",
                      "#999999",
                    ],
                    "darkBackgroundTextColor": "rgba(255, 255, 255, 0.85)",
                    "light": Array [
                      "#F6F6F6",
                      "#EEEEEE",
                      "#DDDDDD",
                      "#CCCCCC",
                      "#BBBBBB",
                      "#AAAAAA",
                    ],
                    "neutral": Array [
                      "#0A64A0",
                      "#DC2878",
                      "#501EB4",
                      "#49516F",
                    ],
                    "status": Object {
                      "critical": "#FF324D",
                      "disabled": "#a8a8a8",
                      "error": "#FF324D",
                      "ok": "#8CC800",
                      "unknown": "#a8a8a8",
                      "warning": "#FFD602",
                    },
                    "text": "#333333",
                    "white": "#FFFFFF",
                  },
                  "control": Object {
                    "font": Object {
                      "size": "19px",
                      "weight": 600,
                    },
                  },
                  "drop": Object {
                    "backgroundColor": "#f8f8f8",
                    "border": Object {
                      "radius": "0px",
                      "width": "0px",
                    },
                    "boxShadow": "none",
                  },
                  "edgeSize": Object {
                    "large": "48px",
                    "medium": "24px",
                    "small": "12px",
                    "xlarge": "96px",
                    "xsmall": "6px",
                  },
                  "focus": Object {
                    "border": Object {},
                  },
                  "font": Object {
                    "face": "
                      @font-face {
                        font-family: 'Work Sans';
                        font-style: normal;
                        font-weight: 300;
                        src:
                          local('Work Sans Light'),
                          local('WorkSans-Light'),
                          url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                      }
              
                      @font-face {
                        font-family: 'Work Sans';
                        font-style: normal;
                        font-weight: 400;
                        src:
                          local('Work Sans'),
                          local('WorkSans-Regular'),
                          url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
                      }
              
                      @font-face {
                        font-family: 'Work Sans';
                        font-style: normal;
                        font-weight: 500;
                        src:
                          local('Work Sans Medium'),
                          local('WorkSans-Medium'),
                          url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                      }
              
                      @font-face {
                        font-family: 'Work Sans';
                        font-style: normal;
                        font-weight: 600;
                        src:
                          local('Work Sans SemiBold'),
                          local('WorkSans-SemiBold'),
                          url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                      }
              
                      @font-face {
                        font-family: 'Work Sans';
                        font-style: normal;
                        font-weight: 700;
                        src:
                          local('Work Sans Bold'),
                          local('WorkSans-Bold'),
                          url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                      }
                    ",
                    "family": "'Work Sans', Arial, sans-serif",
                    "size": "16px",
                  },
                  "hover": Object {
                    "backgroundColor": "rgba(221,221,221,0.5)",
                    "textColor": "#000000",
                  },
                  "input": Object {
                    "border": Object {
                      "color": "rgba(0, 0, 0, 0.15)",
                      "radius": "4px",
                      "width": "1px",
                    },
                  },
                  "lineHeight": "24px",
                  "placeholder": Object {
                    "color": "#AAAAAA",
                  },
                  "selected": Object {
                    "backgroundColor": "#ccbaee",
                    "textColor": "#333333",
                  },
                  "size": Object {
                    "full": "100%",
                    "large": "576px",
                    "medium": "384px",
                    "small": "192px",
                    "xlarge": "720px",
                    "xsmall": "96px",
                    "xxlarge": "960px",
                    "xxsmall": "48px",
                  },
                  "spacing": "24px",
                },
                "grommet": Object {},
                "heading": Object {
                  "level": Object {
                    "1": Object {
                      "large": Object {
                        "height": 1.125,
                        "size": "96px",
                      },
                      "medium": Object {
                        "height": 1.125,
                        "size": "48px",
                      },
                      "small": Object {
                        "height": 1.333,
                        "size": "24px",
                      },
                    },
                    "2": Object {
                      "large": Object {
                        "height": 1.125,
                        "size": "48px",
                      },
                      "medium": Object {
                        "height": 1.23,
                        "size": "36px",
                      },
                      "small": Object {
                        "height": 1.333,
                        "size": "18px",
                      },
                    },
                    "3": Object {
                      "large": Object {
                        "height": 1.23,
                        "size": "36px",
                      },
                      "medium": Object {
                        "height": 1.333,
                        "size": "24px",
                      },
                      "small": Object {
                        "height": 1.333,
                        "size": "18px",
                      },
                    },
                    "4": Object {
                      "large": Object {
                        "height": 1.333,
                        "size": "24px",
                      },
                      "medium": Object {
                        "height": 1.333,
                        "size": "18px",
                      },
                      "small": Object {
                        "height": 1.333,
                        "size": "16px",
                      },
                    },
                  },
                  "weight": 300,
                },
                "layer": Object {
                  "backgroundColor": "#FFFFFF",
                  "border": Object {
                    "radius": "4px",
                  },
                  "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
                },
                "paragraph": Object {
                  "large": Object {
                    "height": 1.167,
                    "maxWidth": "864px",
                    "size": "24px",
                  },
                  "medium": Object {
                    "height": 1.375,
                    "maxWidth": "576px",
                    "size": "16px",
                  },
                  "small": Object {
                    "height": 1.43,
                    "maxWidth": "432px",
                    "size": "14px",
                  },
                  "xlarge": Object {
                    "height": 1.1875,
                    "maxWidth": "1152px",
                    "size": "32px",
                  },
                },
              }
            }
          >
            <div
              className="c1"
              onKeyDown={[Function]}
            >
              <StyledLayer__StyledContainer
                theme={
                  Object {
                    "button": Object {
                      "border": Object {
                        "radius": "5px",
                        "width": "2px",
                      },
                      "colors": Object {
                        "accent": "#00CCEB",
                        "critical": "#FF324D",
                        "secondary": "#DC2878",
                      },
                      "maxWidth": "384px",
                      "minWidth": "120px",
                      "padding": Object {
                        "horizontal": "22px",
                        "vertical": "6px",
                      },
                    },
                    "global": Object {
                      "centerColumnWidth": "1152px",
                      "colors": Object {
                        "accent": Array [
                          "#00CCEB",
                          "#FF7D28",
                        ],
                        "background": "#FFFFFF",
                        "black": "#000000",
                        "brand": "#865CD6",
                        "dark": Array [
                          "#333333",
                          "#444444",
                          "#555555",
                          "#666666",
                          "#777777",
                          "#999999",
                        ],
                        "darkBackgroundTextColor": "rgba(255, 255, 255, 0.85)",
                        "light": Array [
                          "#F6F6F6",
                          "#EEEEEE",
                          "#DDDDDD",
                          "#CCCCCC",
                          "#BBBBBB",
                          "#AAAAAA",
                        ],
                        "neutral": Array [
                          "#0A64A0",
                          "#DC2878",
                          "#501EB4",
                          "#49516F",
                        ],
                        "status": Object {
                          "critical": "#FF324D",
                          "disabled": "#a8a8a8",
                          "error": "#FF324D",
                          "ok": "#8CC800",
                          "unknown": "#a8a8a8",
                          "warning": "#FFD602",
                        },
                        "text": "#333333",
                        "white": "#FFFFFF",
                      },
                      "control": Object {
                        "font": Object {
                          "size": "19px",
                          "weight": 600,
                        },
                      },
                      "drop": Object {
                        "backgroundColor": "#f8f8f8",
                        "border": Object {
                          "radius": "0px",
                          "width": "0px",
                        },
                        "boxShadow": "none",
                      },
                      "edgeSize": Object {
                        "large": "48px",
                        "medium": "24px",
                        "small": "12px",
                        "xlarge": "96px",
                        "xsmall": "6px",
                      },
                      "focus": Object {
                        "border": Object {},
                      },
                      "font": Object {
                        "face": "
                          @font-face {
                            font-family: 'Work Sans';
                            font-style: normal;
                            font-weight: 300;
                            src:
                              local('Work Sans Light'),
                              local('WorkSans-Light'),
                              url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                          }
                  
                          @font-face {
                            font-family: 'Work Sans';
                            font-style: normal;
                            font-weight: 400;
                            src:
                              local('Work Sans'),
                              local('WorkSans-Regular'),
                              url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
                          }
                  
                          @font-face {
                            font-family: 'Work Sans';
                            font-style: normal;
                            font-weight: 500;
                            src:
                              local('Work Sans Medium'),
                              local('WorkSans-Medium'),
                              url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                          }
                  
                          @font-face {
                            font-family: 'Work Sans';
                            font-style: normal;
                            font-weight: 600;
                            src:
                              local('Work Sans SemiBold'),
                              local('WorkSans-SemiBold'),
                              url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                          }
                  
                          @font-face {
                            font-family: 'Work Sans';
                            font-style: normal;
                            font-weight: 700;
                            src:
                              local('Work Sans Bold'),
                              local('WorkSans-Bold'),
                              url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                          }
                        ",
                        "family": "'Work Sans', Arial, sans-serif",
                        "size": "16px",
                      },
                      "hover": Object {
                        "backgroundColor": "rgba(221,221,221,0.5)",
                        "textColor": "#000000",
                      },
                      "input": Object {
                        "border": Object {
                          "color": "rgba(0, 0, 0, 0.15)",
                          "radius": "4px",
                          "width": "1px",
                        },
                      },
                      "lineHeight": "24px",
                      "placeholder": Object {
                        "color": "#AAAAAA",
                      },
                      "selected": Object {
                        "backgroundColor": "#ccbaee",
                        "textColor": "#333333",
                      },
                      "size": Object {
                        "full": "100%",
                        "large": "576px",
                        "medium": "384px",
                        "small": "192px",
                        "xlarge": "720px",
                        "xsmall": "96px",
                        "xxlarge": "960px",
                        "xxsmall": "48px",
                      },
                      "spacing": "24px",
                    },
                    "grommet": Object {},
                    "heading": Object {
                      "level": Object {
                        "1": Object {
                          "large": Object {
                            "height": 1.125,
                            "size": "96px",
                          },
                          "medium": Object {
                            "height": 1.125,
                            "size": "48px",
                          },
                          "small": Object {
                            "height": 1.333,
                            "size": "24px",
                          },
                        },
                        "2": Object {
                          "large": Object {
                            "height": 1.125,
                            "size": "48px",
                          },
                          "medium": Object {
                            "height": 1.23,
                            "size": "36px",
                          },
                          "small": Object {
                            "height": 1.333,
                            "size": "18px",
                          },
                        },
                        "3": Object {
                          "large": Object {
                            "height": 1.23,
                            "size": "36px",
                          },
                          "medium": Object {
                            "height": 1.333,
                            "size": "24px",
                          },
                          "small": Object {
                            "height": 1.333,
                            "size": "18px",
                          },
                        },
                        "4": Object {
                          "large": Object {
                            "height": 1.333,
                            "size": "24px",
                          },
                          "medium": Object {
                            "height": 1.333,
                            "size": "18px",
                          },
                          "small": Object {
                            "height": 1.333,
                            "size": "16px",
                          },
                        },
                      },
                      "weight": 300,
                    },
                    "layer": Object {
                      "backgroundColor": "#FFFFFF",
                      "border": Object {
                        "radius": "4px",
                      },
                      "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
                    },
                    "paragraph": Object {
                      "large": Object {
                        "height": 1.167,
                        "maxWidth": "864px",
                        "size": "24px",
                      },
                      "medium": Object {
                        "height": 1.375,
                        "maxWidth": "576px",
                        "size": "16px",
                      },
                      "small": Object {
                        "height": 1.43,
                        "maxWidth": "432px",
                        "size": "14px",
                      },
                      "xlarge": Object {
                        "height": 1.1875,
                        "maxWidth": "1152px",
                        "size": "32px",
                      },
                    },
                  }
                }
              >
                <div
                  className="c2"
                >
                  <a
                    aria-hidden="true"
                    style={
                      Object {
                        "outline": "none",
                      }
                    }
                    tabIndex="-1"
                  />
                  <div>
                    custom closer
                  </div>
                  This is a Layer
                </div>
              </StyledLayer__StyledContainer>
            </div>
          </StyledLayer>
        </Keyboard>
      </LayerContainer>
    </div>
  </StyledGrommet__StyledGrommet>
</Grommet>
`;

exports[`Layer mounts 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<FakeLayer>
  <Grommet
    centered={true}
  >
    <StyledGrommet__StyledGrommet
      centered={true}
      theme={
        Object {
          "button": Object {
            "border": Object {
              "radius": "5px",
              "width": "2px",
            },
            "colors": Object {
              "accent": "#00CCEB",
              "critical": "#FF324D",
              "secondary": "#DC2878",
            },
            "maxWidth": "384px",
            "minWidth": "120px",
            "padding": Object {
              "horizontal": "22px",
              "vertical": "6px",
            },
          },
          "global": Object {
            "centerColumnWidth": "1152px",
            "colors": Object {
              "accent": Array [
                "#00CCEB",
                "#FF7D28",
              ],
              "background": "#FFFFFF",
              "black": "#000000",
              "brand": "#865CD6",
              "dark": Array [
                "#333333",
                "#444444",
                "#555555",
                "#666666",
                "#777777",
                "#999999",
              ],
              "darkBackgroundTextColor": "rgba(255, 255, 255, 0.85)",
              "light": Array [
                "#F6F6F6",
                "#EEEEEE",
                "#DDDDDD",
                "#CCCCCC",
                "#BBBBBB",
                "#AAAAAA",
              ],
              "neutral": Array [
                "#0A64A0",
                "#DC2878",
                "#501EB4",
                "#49516F",
              ],
              "status": Object {
                "critical": "#FF324D",
                "disabled": "#a8a8a8",
                "error": "#FF324D",
                "ok": "#8CC800",
                "unknown": "#a8a8a8",
                "warning": "#FFD602",
              },
              "text": "#333333",
              "white": "#FFFFFF",
            },
            "control": Object {
              "font": Object {
                "size": "19px",
                "weight": 600,
              },
            },
            "drop": Object {
              "backgroundColor": "#f8f8f8",
              "border": Object {
                "radius": "0px",
                "width": "0px",
              },
              "boxShadow": "none",
            },
            "edgeSize": Object {
              "large": "48px",
              "medium": "24px",
              "small": "12px",
              "xlarge": "96px",
              "xsmall": "6px",
            },
            "focus": Object {
              "border": Object {},
            },
            "font": Object {
              "face": "
                @font-face {
                  font-family: 'Work Sans';
                  font-style: normal;
                  font-weight: 300;
                  src:
                    local('Work Sans Light'),
                    local('WorkSans-Light'),
                    url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                }
        
                @font-face {
                  font-family: 'Work Sans';
                  font-style: normal;
                  font-weight: 400;
                  src:
                    local('Work Sans'),
                    local('WorkSans-Regular'),
                    url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
                }
        
                @font-face {
                  font-family: 'Work Sans';
                  font-style: normal;
                  font-weight: 500;
                  src:
                    local('Work Sans Medium'),
                    local('WorkSans-Medium'),
                    url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                }
        
                @font-face {
                  font-family: 'Work Sans';
                  font-style: normal;
                  font-weight: 600;
                  src:
                    local('Work Sans SemiBold'),
                    local('WorkSans-SemiBold'),
                    url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                }
        
                @font-face {
                  font-family: 'Work Sans';
                  font-style: normal;
                  font-weight: 700;
                  src:
                    local('Work Sans Bold'),
                    local('WorkSans-Bold'),
                    url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
                }
              ",
              "family": "'Work Sans', Arial, sans-serif",
              "size": "16px",
            },
            "hover": Object {
              "backgroundColor": "rgba(221,221,221,0.5)",
              "textColor": "#000000",
            },
            "input": Object {
              "border": Object {
                "color": "rgba(0, 0, 0, 0.15)",
                "radius": "4px",
                "width": "1px",
              },
            },
            "lineHeight": "24px",
            "placeholder": Object {
              "color": "#AAAAAA",
            },
            "selected": Object {
              "backgroundColor": "#ccbaee",
              "textColor": "#333333",
            },
            "size": Object {
              "full": "100%",
              "large": "576px",
              "medium": "384px",
              "small": "192px",
              "xlarge": "720px",
              "xsmall": "96px",
              "xxlarge": "960px",
              "xxsmall": "48px",
            },
            "spacing": "24px",
          },
          "grommet": Object {},
          "heading": Object {
            "level": Object {
              "1": Object {
                "large": Object {
                  "height": 1.125,
                  "size": "96px",
                },
                "medium": Object {
                  "height": 1.125,
                  "size": "48px",
                },
                "small": Object {
                  "height": 1.333,
                  "size": "24px",
                },
              },
              "2": Object {
                "large": Object {
                  "height": 1.125,
                  "size": "48px",
                },
                "medium": Object {
                  "height": 1.23,
                  "size": "36px",
                },
                "small": Object {
                  "height": 1.333,
                  "size": "18px",
                },
              },
              "3": Object {
                "large": Object {
                  "height": 1.23,
                  "size": "36px",
                },
                "medium": Object {
                  "height": 1.333,
                  "size": "24px",
                },
                "small": Object {
                  "height": 1.333,
                  "size": "18px",
                },
              },
              "4": Object {
                "large": Object {
                  "height": 1.333,
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.333,
                  "size": "18px",
                },
                "small": Object {
                  "height": 1.333,
                  "size": "16px",
                },
              },
            },
            "weight": 300,
          },
          "layer": Object {
            "backgroundColor": "#FFFFFF",
            "border": Object {
              "radius": "4px",
            },
            "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
          },
          "paragraph": Object {
            "large": Object {
              "height": 1.167,
              "maxWidth": "864px",
              "size": "24px",
            },
            "medium": Object {
              "height": 1.375,
              "maxWidth": "576px",
              "size": "16px",
            },
            "small": Object {
              "height": 1.43,
              "maxWidth": "432px",
              "size": "14px",
            },
            "xlarge": Object {
              "height": 1.1875,
              "maxWidth": "1152px",
              "size": "32px",
            },
          },
        }
      }
    >
      <div
        className="c0"
      >
        <Layer
          align="center"
          onClose={[Function]}
        >
          <span
            style={
              Object {
                "display": "none",
              }
            }
          />
        </Layer>
      </div>
    </StyledGrommet__StyledGrommet>
  </Grommet>
</FakeLayer>
`;

exports[`Layer renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
  <span
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Layer unmounts 1`] = `""`;
